--- a/src/business.html
+++ b/src/business.html
@@ -10,6 +10,7 @@
   <title>Openpay I’m a business</title>
   <meta name="description" content="Openpay Welcome to a smarter way to pay" />
   <!-- Google Tag Manager -->
+  <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
       w[l] = w[l] || [];
@@ -21,9 +22,10 @@
         j = d.createElement(s),
         dl = l != 'dataLayer' ? '&l=' + l : '';
       j.async = true;
-      j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
       f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-TF3JKHF');
+    })(window, document, 'script', 'dataLayer', 'GTM-NH9RBKG');
   </script>
 
   <!-- 	FullStory Snippet -->
@@ -81,6 +83,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NH9RBKG" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div class="header-wrap block-wap">
     <header class="header block-child-wrap">
       <div class="header-logo-and-trigger">
